--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,4 +30,10 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    dependencies {
+        implementation 'androidx.appcompat:appcompat:1.2.0'
+        implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+        api fileTree(dir: 'libs', include: ['*.aar'])
+    }
 }
