--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- 文件写入-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- 改变Wi-Fi 状态 -->
 
-    <application>
+    <application
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        >
         <!--联通电信授权页-->
         <activity
             android:name="com.mobile.auth.gatewayauth.LoginAuthActivity"
